rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__word__tests__word_join_offset.snap
---
source: src/tokenization/word.rs
expression: w1.join(&w2)
---
Word {
    ix: 0,
    place: (
        3,
        16,
    ),
    stem: 13,
    pos: None,
    fin: true,
}
