rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__word__tests__word_lower.snap
---
source: src/tokenization/word.rs
expression: word
---
Word {
    place: (
        0,
        15,
    ),
    stem: 15,
    pos: None,
    fin: true,
}
