rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__word__tests__word_split.snap
---
source: src/tokenization/word.rs
expression: split
---
[
    Word {
        place: (
            1,
            4,
        ),
        stem: 3,
        pos: None,
        fin: true,
    },
    Word {
        place: (
            5,
            8,
        ),
        stem: 3,
        pos: None,
        fin: true,
    },
    Word {
        place: (
            10,
            13,
        ),
        stem: 3,
        pos: None,
        fin: true,
    },
]
