rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__word__tests__word_strip.snap
---
source: src/tokenization/word.rs
expression: "&word"
---
Word {
    place: (
        1,
        4,
    ),
    stem: 6,
    pos: None,
    fin: true,
}
