rust/core/src/tokenization/snapshots/lucid_suggest_core__tokenization__word__tests__word_strip_empty.snap
---
source: src/tokenization/word.rs
expression: word
---
Word {
    ix: 0,
    place: (
        3,
        3,
    ),
    stem: 3,
    pos: None,
    fin: true,
}
